# rust-simple-dot

./: .gitignore  Cargo.toml  README.md
src/: colors.rs  edge.rs  error.rs  graph.rs  lib.rs  macros.rs  node.rs  sdot.rs  style.rs  visitor.rs  writer.rs
src/attributes/: cluster.rs  edge.rs  graph.rs  mod.rs  node.rs
src/edge/: end.rs  mod.rs
src/graph/: cluster.rs  mod.rs  root.rs  sub_graph.rs
src/node/: mod.rs
tests/: attributes.rs  edge.rs  graph.rs  node.rs  writer.rs
tests/common/: mod.rs
